Made a strength Counter Bar and added text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <main></main>
         <script src="sketch.js"></script>
-        <script src="nbuttons.js"></script>
+        <script src="Button.js"></script>
+        <script src="loadingBar.js"></script>
     </body>
 </html>
